# Math-Wizard

./: .gitignore  LICENSE  pyproject.toml  pyrightconfig.json  readme.md
.github/workflows/: lint.yml  python-publish.yml  tests.yml
numsy/: __init__.py
numsy/parser/: objects.py  parser.py  utility.py
numsy/solver/: __init__.py  core.py  datatype.py  errors.py  matrices.py  solve_algebra.py  solve_basic.py  utility.py
parser/: __init__.py  checker.py  errors.py  objects.py  parser.py  utility.py
solver/: __init__.py  core.py  datatype.py  errors.py  logging.py  matrices.py  solve_algebra.py  solve_basic.py  utility.py
tests/: test_algebra_utils.py  test_matrices.py  test_output.py  test_power.py  test_problems.py  test_problems.txt  test_utility.py  test_variables.py  test_variables.txt
