[project]
name = "numsy"
version = "0.1.0"
description = "Providing a powerful and accurate Math Solver."
readme = "readme.md"
authors = [{ name = "xCirno1", email = "xcirno6@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
requires-python = ">= 3.10"

[tool.pyright]
include = [
    "parser",
    "solver"
]

pythonVersion = "3.10"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
py-modules = []
