[project]
name = "numsy"
version = "0.1.1"
description = "Providing a powerful and accurate Math Solver."
readme = "readme.md"
authors = [{ name = "xCirno1", email = "xcirno6@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
requires-python = ">= 3.10"

[project.urls]
Documentation = "https://github.com/xCirno1/numsy"
Issues = "https://github.com/xCirno1/numsy/issues"

[tool.setuptools.packages.find]
include = ["numsy*"]
namespaces = false

[tool.pyright]
include = [
    "numsy",
]

pythonVersion = "3.10"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
py-modules = []
